--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Main Content -->
     <main class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="search engine optimization image">
             <h2>Search Engine Optimization</h2>
