updated comments on css and index. Added boilerplate README text

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <!-- Horiseon Logo -->
+    <!-- horiseon logo -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
 
-        <!-- Navigation Bar -->
+        <!-- navigation bar -->
         <div>
             <ul>
                 <li>
@@ -28,10 +28,10 @@
         </div>
     </header>
 
-    <!-- Landing page image -->
+    <!-- hero image -->
     <div class="hero"></div>
 
-    <!-- Main Content -->
+    <!-- main content -->
     <main class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
@@ -64,7 +64,7 @@
         </div>
     </main>
 
-    <!-- Aside -->
+    <!-- aside -->
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -92,7 +92,7 @@
         </div>
     </aside>
 
-    <!-- Footer -->
+    <!-- footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
